app/css/app.css
/* ... */
div.card div.left {
  width: 90px;
  height: 100%;
  border-right: 1px rgb(188, 195, 201) solid;
  float: left;
}

div.card div.left img {
  width: 70px;
  position: relative;
  top: 47px;
  left: 10px;
}

#card3 img {
  width: 45px;
  height: 77px;
  margin-left: 14px;
}

div.card div.right {
  height: 100%;
  float: left;
}

div.card div.right p.cardValue {
  font-family: 'Arial', 'Arial', 'Helvetica', 'sans-serif';
  font-weight: 400;
  font-style: normal;
  font-size: 40px;
  line-height: 24px;
  position: relative;
  top: 55px;
  left: 10px;
}

div.card div.right p.cardTitle {
  font-family: 'Arial', 'Arial', 'Helvetica', 'sans-serif';
  font-weight: 400;
  font-style: normal;
  font-size: 20px;
  line-height: 24px;
  position: relative;
  top: 70px;
  left: 10px;
}

select#switchVersion {
  margin-top: 13px;
}


/*Table*/

#table {
  width: 1165px;
  margin: 10px auto 0 auto;
  color: black;
  display: none;
}

.tableDiv {
  background-attachment: scroll;
  background-clip: border-box;
  background-color: rgb(255, 255, 255);
  background-image: none;
  background-origin: padding-box;
  background-size: auto;
  border-bottom-color: rgb(188, 195, 201);
  border-bottom-left-radius: 0px;
  border-bottom-right-radius: 0px;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  border-left-color: rgb(188, 195, 201);
  border-left-style: solid;
  border-left-width: 1px;
  border-right-color: rgb(188, 195, 201);
  border-right-style: solid;
  border-right-width: 1px;
  border-top-color: rgb(188, 195, 201);
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
  border-top-style: solid;
  border-top-width: 1px;
  box-shadow: rgba(0, 0, 0, 0.34902) 2px 2px 5px 0px;
  box-sizing: border-box;
  padding: 30px 20px;
}

#table h2 {
  font-size: 18px;
  font-weight: bold;
  padding-bottom: 5px;
}

#table .tableDivChild {
  position: relative;
}

.tableDiv thead {
  background-color: #F5F5F5
}

.tableDiv th,
.tableDiv td {
  border-right: 1px solid #E6E6E6;
}

.tableDiv table tbody:nth-child(3) td {
  background-color: #F9F9F9;
  font-weight: bold;
}

.tableDiv table tbody:nth-child(3) tr:nth-child(1) td {
  border-top: 2px solid #e0e0e0;
}

div.tableDivChild table.dataTable {
  padding-top: 20px;
}

div.tableDivChild.showThisTableFilter div.dataTables_scrollHead table.dataTable {
  padding-top: 80px;
}

div.dataTables_scrollBody table.dataTable {
  padding-top: 0;
}

table td span.yesorno {
  display: none;
}

table thead th {
  white-space: nowrap;
}

table img.right {
  width: 20px;
  height: 20px;
}

table img.wrong {
  width: 15px;
  height: 15px;
}

#table1 tbody tr td:nth-child(2),
#table2 tbody tr td:nth-child(2),
#table3 tbody tr td:nth-child(1),
#table4 tbody tr td:nth-child(2),
#table6 tbody tr td:nth-child(2) {
  color: #4178BE;
  cursor: pointer;
  white-space: nowrap;
}

#table1 tbody tr td:nth-child(2):hover,
#table2 tbody tr td:nth-child(2):hover,
#table3 tbody tr td:nth-child(1):hover,
#table4 tbody tr td:nth-child(2):hover,
#table6 tbody tr td:nth-child(2):hover {
  text-decoration: underline;
}

#table .actionArea {
  position: absolute;
  left: 180px;
  top: -10px;
  z-index: 100;
}

#table p.toggleFilter {
  float: left;
  margin-right: 20px;
}

#table p.emailUsers {
  float: left;
}

#table p.emailUsers button.disabled {
  background-color: #ececec;
  border: 2px solid #ececec;
  color: #777677;
}

#table1 thead tr th:nth-child(1),
#table2 thead tr th:nth-child(1),
#table4 thead tr th:nth-child(1),
#table6 thead tr th:nth-child(1) {
  width: 14px;
  text-align: center;
}


/*table1*/

#table1 thead th {
  white-space: normal;
  vertical-align: middle;
}

#table1 tbody tr td:nth-child(2) span {
  display: inline-flex;
  max-width: 177px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

#table1 tbody tr td {
  white-space: nowrap;
}

#table1 tbody tr td:nth-child(5),
#table1 tbody tr td:nth-child(6),
#table1 tbody tr td:nth-child(8),
#table1 tbody tr td:nth-child(9),
#table1 tbody tr td:nth-child(10),
#table1 tbody tr td:nth-child(11),
{
  text-align: center;
  white-space: nowrap;
}

#table1 tbody tr td:nth-child(3),
#table1 tbody tr td:nth-child(4),
#table1 tbody tr td:nth-child(7) {
  text-align: right;
  white-space: nowrap;
}

#table1 tbody tr td:nth-child(7) {
  min-width: 80px;
}

#table1 tbody tr td:nth-child(8) {
  max-width: 110px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}


/*table2*/

#table2 tbody tr td:nth-child(4),
#table2 tbody tr td:nth-child(5),
#table2 tbody tr td:nth-child(6),
#table2 tbody tr td:nth-child(7),
#table2 tbody tr td:nth-child(8) {
  text-align: center;
}

#table2FilterForm {
  width: 300px;
}

#table2FilterForm select {
  width: 20%;
}

#table2FilterForm p.ibm-form-elem-grp span.select2.select2-container.select2-container--default:nth-child(3) {
  margin-right: -5px;
}

#table2FilterForm p.ibm-form-elem-grp span.select2.select2-container.select2-container--default:nth-child(5) {
  margin-right: 20px;
}

#table2FilterForm p.ibm-form-elem-grp span.select2.select2-container.select2-container--default:nth-child(7) {
  margin-right: -5px;
}

#table2FilterForm p.ibm-form-elem-grp span.select2.select2-container.select2-container--default:nth-child(9) {
  margin-right: 20px;
}


/*table3*/


/*table4*/


/*table5*/

#table5 tbody tr td:nth-child(4),
#table5 tbody tr td:nth-child(5),
#table5 tbody tr td:nth-child(6),
#table5 tbody tr td:nth-child(7) {
  text-align: center;
}

#table5FilterForm {
  width: 300px;
}

#table5FilterForm select {
  width: 20%;
}


/*table6*/

#table6 thead tr th:nth-child(3),
#table6 thead tr th:nth-child(4),
#table6 thead tr th:nth-child(5),
#table6 thead tr th:nth-child(7),
#table6 thead tr th:nth-child(6) {
  text-align: center;
}

#table6 tbody tr td:nth-child(3),
#table6 tbody tr td:nth-child(4),
#table6 tbody tr td:nth-child(5),
#table6 tbody tr td:nth-child(7),
#table6 tbody tr td:nth-child(6) {
  text-align: center;
}
/* ... */

